test/spec_vectors/local_get/fail/module_13.wat
(module (func $unbound-param (param i32 i64) (local.get 2) drop))